--- a/src/main/resources/static/styles/user/formPage.css
+++ b/src/main/resources/static/styles/user/formPage.css
@@ -1,4 +1,25 @@
+.inLine {
+    display: flex;
+}
+
+.inLine > .elementInLine{
+    margin: 10px;
+}
+
+.buttonForm {
+    width: 50px;
+    height: 50px;
+}
+
 button {
-    width:450px;
+    width:400px;
     height:40px;
+}
+
+.numberP {
+    vertical-align: middle;
+}
+
+.list1a {
+    display: none;
 }
