--- a/src/main/resources/static/styles/user/tableCartList.css
+++ b/src/main/resources/static/styles/user/tableCartList.css
@@ -7,7 +7,7 @@ h1{
     margin-bottom: 15px;
 }
 table{
-    width:100%;
+    width:75%;
     table-layout: fixed;
 }
 .tbl-header{
@@ -21,18 +21,18 @@ table{
 }
 th{
     padding: 20px 15px;
-    text-align: left;
+    text-align: center;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 21px;
     color: #fff;
     text-transform: uppercase;
 }
 td{
     padding: 15px;
-    text-align: left;
+    text-align: center;
     vertical-align:middle;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 21px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
 }
