--- a/src/main/resources/templates/manager/historyOrder.html
+++ b/src/main/resources/templates/manager/historyOrder.html
@@ -5,6 +5,7 @@
     <title>HistoryOrder</title>
     <link th:href="@{/styles/general/general.css}" rel="stylesheet"/>
     <link th:href="@{/styles/general/inputSpace.css}" rel="stylesheet"/>
+    <link th:href="@{/styles/manager/historyOrder.css}" rel="stylesheet"/>
 </head>
 <body>
 <h1>HistoryOrder</h1>
@@ -31,15 +32,21 @@
     </tr>
     </tbody>
 </table>
-<div th:if="${orderPage.totalPages > 0}">
-    <a th:style="${orderPage.number > 0 ? '' : 'pointer-events: none'}"
+
+<div th:if="${orderPage.totalPages > 0}" class="buttonInLine">
+    <a class="button" th:style="${orderPage.number > 0 ? '' : 'pointer-events: none'}"
        th:href="@{/manager/historyOrder(size=${orderPage.size}, page=${1})}">First</a>
-    <a th:style="${orderPage.number > 0 ? '' : 'pointer-events: none'}"
+    <a class="button" th:style="${orderPage.number > 0 ? '' : 'pointer-events: none'}"
        th:href="@{/manager/historyOrder(size=${orderPage.size}, page=${orderPage.number})}">Prev</a>
-    <a th:style="${orderPage.number + 1 < orderPage.totalPages ? '' : 'pointer-events: none' }"
+    <a class="button" th:style="${orderPage.number + 1 < orderPage.totalPages ? '' : 'pointer-events: none' }"
        th:href="@{/manager/historyOrder(size=${orderPage.size}, page=${orderPage.number + 2})}">Next</a>
-    <a th:style="${orderPage.number + 1 < orderPage.totalPages ? '' : 'pointer-events: none'}"
+    <a class="button" th:style="${orderPage.number + 1 < orderPage.totalPages ? '' : 'pointer-events: none'}"
        th:href="@{/manager/historyOrder(size=${orderPage.size}, page=${orderPage.totalPages})}">Last</a>
 </div>
+
+<button type="button" class="buttons" onclick="goTo('manager/main')" id="redirectBackButton">На главную</button>
+
+<script th:src="@{/js/general/goto.js}"></script>
+
 </body>
 </html>
