--- a/src/main/resources/templates/manager/main.html
+++ b/src/main/resources/templates/manager/main.html
@@ -15,6 +15,8 @@
     <button onclick="goTo('manager/factoryPotion')">Производство зелий</button>
     <button onclick="goTo('manager/orderIngredient')">Заказ ингредиентов</button>
     <button onclick="goTo('manager/warehouse')">Склад</button>
+    <button onclick="goTo('manager/start')">Выход</button>
+
 
     <script th:src="@{/js/general/goto.js}"></script>
 </div>
