--- a/src/main/resources/templates/manager/main.html
+++ b/src/main/resources/templates/manager/main.html
@@ -13,7 +13,7 @@
     <button onclick="goTo('manager/orderList')">Список активных заказов</button>
     <button onclick="goTo('manager/historyOrder')">История заказов</button>
     <button onclick="goTo('manager/factoryPotion')">Производство зелий</button>
-    <button onclick="goTo('manager/orderIngredient')">Заказ ингредиентов</button>
+<!--    <button onclick="goTo('manager/orderIngredient')">Заказ ингредиентов</button>-->
     <button onclick="goTo('manager/warehouse')">Склад</button>
     <button onclick="goTo('manager/start')">Выход</button>
 
